OSA document alignment fix. Added link to navbar JS in document.

--- a/styles/osa-styles/osa-documents.css
+++ b/styles/osa-styles/osa-documents.css
@@ -54,6 +54,7 @@ body {
     align-items: center;
     justify-content: flex-start;
     overflow-y: auto;
+    margin-left: 300px;
 }
 
 .documents-container {
@@ -109,7 +110,7 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 16px;
-    padding: 16px 20px,16px,20px;
+    padding: 16px 20px, 16px, 20px;
     border-radius: 10px;
 }
 
